modules/gdscript/tests/scripts/analyzer/errors/enum_name_shadows_builtin_type.gd
enum Hector2 { A, B }

func test():
	pass
